...
            disabled={accepting}
            testID="decline-tos-button"
            accessible
            accessibilityRole="button"
            accessibilityLabel="Decline tos button"
          >
            <Text style={styles.declineButtonText}>Decline</Text>
          </TouchableOpacity>
        </View>
      )}
    </ScreenLayout>
  );
}
...
